syntax = "proto3";

package myapp;

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

option go_package = "github.com/my-app/pkg/pb;pb";


message VersionResponse {
  string version = 1;
}

message UpdateDescriptionRequest {
  string description = 1;
  int64 service = 2;
}

message UpdateDescriptionResponse {
  string description = 1;
}

message GetDescriptionRequest {
  int64 service = 1;
}

message GetDescriptionResponse {
  string description = 1;
}

message GetUptimeRequest {
  int64 service = 1;
}

message GetUptimeResponse {
  int64 uptime = 1;
}

message GetRequestsRequest {
  int64 service = 1;
}

message GetRequestsResponse {
  int64 requests = 1;
}

message GetModeRequest {
}

message GetModeResponse {
  int64 mode = 1;
}

message SetModeRequest {
  int64 mode = 1;
}

message SetModeResponse {
  int64 mode = 1;
}

message RestartRequest {
  int64 service = 1;
}

message RestartResponse {
}

// TODO: Define the MyApp service and its methods. Feel free
// to change the name of MyApp to better-suit your naming
// conventions.
service MyApp {
  rpc GetVersion (google.protobuf.Empty) returns (VersionResponse) {
    // TODO: Provide mappings between REST endpoints and service methods.
    option (google.api.http) = {
      get: "/version"
    };
  }

  rpc UpdateDescription (UpdateDescriptionRequest) returns (UpdateDescriptionResponse){
    option (google.api.http) = {
        post: "/update"
        body: "*"
    };
  }

  rpc GetDescription (GetDescriptionRequest) returns (GetDescriptionResponse){
    option (google.api.http) = {
        get: "/info/{service}"
    };
  }

  rpc GetUptime (GetUptimeRequest) returns (GetUptimeResponse){
    option (google.api.http) = {
        get: "/uptime/{service}"
    };
  }

  rpc GetRequests (GetRequestsRequest) returns (GetRequestsResponse){
    option (google.api.http) = {
        get: "/requests/{service}"
    };
  }

  rpc GetMode (GetModeRequest) returns (GetModeResponse){
    option (google.api.http) = {
        get: "/mode"
    };
  }

  rpc SetMode (SetModeRequest) returns (SetModeResponse){
    option (google.api.http) = {
        get: "/mode/{mode}"
    };
  }

  rpc Restart (RestartRequest) returns (RestartResponse){
    option (google.api.http) = {
        get: "/restart/{service}"
    };
  }
}
